# interval_map

./: CMakeLists.txt  README.md
include/: interval_map.hpp
tests/: test_main.cpp
